# divibot

./: .env  .eslintrc.json  Cargo.toml  README.md  index.js  package-lock.json  package.json
handlers/: messageHandler.js
modules/: rollDice.js
src/: commands.rs  config.rs  main.rs
src/commands/: meta.rs  pnp.rs
src/commands/pnp/: dice.rs  types.rs
src/modules/: dice.rs
