[package]
name = "divibot"
version = "0.2.0"
authors = ["Alex Sun <alexsun82@icloud.com>"]
edition = "2018"

[dependencies]
serenity = { version = "0.9.0-rc.0", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
tokio = { version = "0.2", features = ["macros"] }
ron = "0.6.0"
serde = "1.0.115"
rand = "0.7.3"
